# skyscribe

./: .gitignore  LICENSE  MANIFEST.in  README.md  TEST  coord_transformer.py  examples.sh  font_extractor.py  format_exporters.py  gui_server.py  mission_generator.py  path_simplifier.py  path_transitions.py  pyproject.toml  render.yaml  requirements.txt  setup.py  text_to_drone_path.py  visualize_path.py
skyink/: __init__.py  coord_transformer.py  format_exporters.py  gui_server.py  text_to_drone_path.py  visualize_path.py
templates/: index.html
